--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./images/image1.jpg" alt="Программирование" width="370" height="294" />
-        <img src="./images/image2.jpg" alt="Мониторинг" width="370" height="294" />
-        <img src="./images/image3.jpg" alt="Дизайн" width="370" height="294" />
+        <ul>
+          <li><img src="./images/image1.jpg" alt="Программирование" width="370" height="294" /></li>
+          <li><img src="./images/image2.jpg" alt="Мониторинг" width="370" height="294" /></li>
+          <li><img src="./images/image3.jpg" alt="Дизайн" width="370" height="294" /></li>
+        </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
